--- a/detail/index.html
+++ b/detail/index.html
@@ -9,9 +9,8 @@
       <main class="main">
         <pug src="src/pug/detail.pug"></pug>
       </main>
+      <pug src="src/pug/footer.pug"></pug>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-    <script type="module" src="./detail.js"></script>
+    <pug src="src/pug/script.pug"></pug>
   </body>
 </html>
